--- a/package.json
+++ b/package.json
@@ -51,9 +51,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
-    "eslint-plugin-react": "^7.22.0"
+    "@types/react-router-dom": "^5.1.7"
   }
 }
